[project]
name = "xarray-safe-s1"
requires-python = ">= 3.10"
license = {text = "MIT"}
dependencies = [
    "geopandas",
    "numpy",
    "xarray",
    "xarray-datatree",
    "lxml",
    "rioxarray",
    "jmespath",
    "fsspec",
    "rasterio",
    "affine",
    "pandas",
    "shapely",
    "pyproj",
    "dask",
]
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["setuptools>=64.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["safe_s1"]

[tool.setuptools_scm]
fallback_version = "999"

[tool.isort]
profile = "black"
skip_gitignore = true
float_to_top = true
default_section = "THIRDPARTY"
known_first_party = "safe_s1"
